<resources>
    <string name="app_name">LCRM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>

    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- <string name="email">admin@crm.com</string>
    <string name="password">admin</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstcolor_pref_key">firstcolor_pref_key</string>
    <string name="secondcolor_pref_key">secondcolor_pref_key</string>
    <string name="thirdcolor_pref_key">thirdcolor_pref_key</string>
    <string name="fourthcolor_pref_key">fourthcolor_pref_key</string>

    <string name="Upload">Upload</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="name_prompt">enter a name </string>

    <string name="question">Are you sure want to exit?</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>


    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="main_contact_person">Main Contact Person </string>
    <string name="sales_team">SalesTeam </string>
    <string name="sales_person">SalesPerson</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password Confirmation</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="customer">Customer</string>
    <string name="responsible">Responsible</string>
    <string name="opportnity">Opportunity</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="call_summary">Call Summary</string>
    <string name="contacts">Contacts</string>
    <string name="duration">Duration</string>
    <string name="meeting_dubject">Meeting Subject</string>
    <string name="attendies">Attendees</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="stages">Stages</string>
    <string name="next_action">Next Action</string>
    <string name="expected_closing">expected closing</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="payment_date">Payment Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="product_type">Product Type </string>
    <string name="amount_received">Amount Received</string>
    <string name="sales_price">Sales Price</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="quantity_hand">Quantity In Hand</string>
    <string name="quantity_available">Quantity Available</string>
    <string name="quotation_template">Quotation Template</string>
    <string name="quotation_template_durtion">Quotation template duration</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="tax_amount">Tax Amount(10%)</string>
    <string name="grand_total">Grand total</string>
    <string name="exp_date">Expiration Date</string>
    <string name="discount">Discount(%)</string>
    <string name="final_price">Final price</string>
    <string name="pay_term">Payment Term</string>
    <string name="invoice_target">Invoice Target</string>
    <string name="invoice_forecast">Invoice Forecast</string>
    <string name="team_leader">TeamLeader</string>
    <string name="team_member">TeamMember</string>
    <string name="photo">Photo</string>
    <string name="permission">Permissions</string>
    <string name="sales_teams">Sales Teams</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="delete">Delete</string>
    <string name="leads">Leads</string>
    <string name="loggedCalls">Logged Calls</string>
    <string name="meetings">Meetings</string>
    <string name="products">Products</string>
    <string name="quotation">Quotation</string>
    <string name="sales_orders">SalesOrder</string>
    <string name="invoices">Invoices</string>
    <string name="contracts">Contracts</string>
    <string name="staffs">Staffs</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="due_date">Due date</string>
    <string name="untaxed_amount">Untaxed Amount</string>
    <string name="taxes">Taxes</string>
    <string name="unpaid_amount">Unpaid Amount</string>
    <string name="remember_me">Remember Me</string>
    <string name="quotation_number">Quotation Number</string>
    <string name="terms_and_condition">Term and Condition</string>
    <string name="sale_number">Sale Number</string>
    <string name="role">Role</string>
    <string name="product_name">Product Name</string>
    <string name="category_name">Category Name</string>
    <string name="local">Local</string>
    <string name="dropbox">DropBox</string>
    <string name="dropbox_key">Dropbox Key</string>
    <string name="dropbox_secret">Dropbox Secret</string>
    <string name="dropbox_token">Dropbox Token</string>
    <string name="dropbox_app">Dropbox App</string>
    <string name="Amazon_s3">Amazon S3</string>
    <string name="aws_key">AWS S3 Key</string>
    <string name="aws_secret">AWS S3 Secret</string>
    <string name="aws_bucket">AWS S3 Bucket</string>
    <string name="aws_region">AWS S3 Region (Ex: us-east-1)p</string>
    <string name="title">Title</string>

    <string name="quotation_duration">Quatation Duration</string>
    <string name="actual_invoice">Actual Invoice</string>
    <string name="created_at">Created At</string>
    <string name="next_action_date">Next Action Date</string>
    <string name="expected_revenue">Expected Revenue</string>
    <string name="mobile">Mobile</string>
    <string name="priority">Priority</string>
    <string name="call">Call</string>
    <string name="meeting">Meeting</string>
    <string name="website">Website</string>
    <string name="contact_name">Contact Name</string>
    <string name="fax">Fax</string>
    <string name="full_name">Full name</string>
    <string name="site_logo">Site Logo</string>
    <string name="site_name">Site Name</string>
    <string name="site_email">Site Email</string>
    <string name="currency">Currency</string>
    <string name="max_upload">Max Upload Amoount</string>
    <string name="alloed">Allowed file extension</string>
    <string name="set">Set minimum  characters for user first/last name</string>
    <string name="date_format">Date Format</string>
    <string name="action_date">Action Date</string>
    <string name="amount">Amount</string>
    <string name="names">Name</string>
    <string name="login">Login</string>
    <string name="submit">SUBMIT</string>
    <string name="save">SAVE</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add_products">Add an product</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">Way2Fresher.com-A very Perfect Jobsite in india which has simple mission to facilitate to find jobs with your matching desire,to prepare for varoius campus written exam and interviews. It also lets you to know about available Schlorships and bank Loans.Way2Fresher mobile application is a genuine effort to provide services in faster way</string>
    <string name="version">Version:1.0</string>
    <string name="help">We are here to help you!</string>
    <string name="help_heading">Please fill below information and submit.We will surely look into this and get back to you!</string>
    <string name="help_heading1">Content Suggestions</string>
    <string name="select">Select</string>
    <string name="answer">Your Answer</string>
    <string name="back">BACK</string>
</resources>
