<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:layout_height="wrap_content"
                    android:hint="@string/date" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_exp_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/exp_date"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:layout_height="wrap_content"
                    android:hint="@string/exp_date" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/customer"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_qtemplate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/quotation_template"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:layout_height="wrap_content"
                    android:hint="@string/quotation_template" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pay_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/pay_term"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"

                    android:layout_height="wrap_content"
                    android:hint="@string/pay_term" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_salesperson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/salesperson"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/sales_person" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_salesteam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/salesteam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/sales_team" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:layout_height="wrap_content"
                    android:hint="@string/status" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add_products"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:padding="2dp"
                android:background="@drawable/btn_add"
                android:textColor="#fff"
                android:textSize="20sp" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:divider="@color/bg_register"
                android:id="@+id/table_products"
                android:stretchColumns="*">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    >
                    <TextView
                        android:text="@string/product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="#000000"
                        android:background="@drawable/cell_shape"

                        />

                    <TextView
                        android:text="@string/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="#000000"
                        android:background="@drawable/cell_shape"

                        />
                    <TextView
                        android:text="@string/unit_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="#000000"
                        android:background="@drawable/cell_shape"

                        />

                    <TextView
                        android:text="@string/sub_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="#000000"
                        android:background="@drawable/cell_shape"
                        />
                 <!--   <TextView
                        android:text="@string/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="#000000"
                        android:background="@drawable/cell_shape"

                        />-->
                </TableRow>

            </TableLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:editable="false"

                    android:layout_height="wrap_content"
                    android:hint="@string/total" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tax"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:editable="false"

                    android:layout_height="wrap_content"
                    android:hint="@string/tax_amount" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_gtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/gtotal"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:editable="false"

                    android:layout_height="wrap_content"
                    android:hint="@string/grand_total" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme"
                    android:editable="false"
                    android:hint="@string/discount" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_final_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/final_price"
                    android:layout_width="match_parent"
                    android:theme="@style/MyEditTextTheme"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/final_price" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dip"
                android:background="@drawable/ripple_btn"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
