<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:padding="10dp"
    android:paddingTop="5dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_salesteam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/salesteamName"
            android:layout_width="match_parent"
            android:inputType="textNoSuggestions"
            android:theme="@android:style/Theme.Holo.Light"

            android:layout_height="wrap_content"
            android:hint="@string/sales_team"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_invoice_target"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/invoice_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/invoice_target"
            android:theme="@android:style/Theme.Holo.Light"

            android:inputType="number"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/input_layout_invoice_forecast"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/invoice_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/invoice_forecast"
            android:theme="@android:style/Theme.Holo.Light"

            android:inputType="number"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/input_layout_team_leader"
        android:layout_height="wrap_content">
        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:id="@+id/team_leader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/team_leader" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/team_member" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/input_layout_team_member"
        android:layout_height="wrap_content">
    <com.project.lorvent.lcrm.utils.ContactsCompletionView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/name_prompt"
        android:imeOptions="actionDone"
        android:inputType="text|textNoSuggestions|textMultiLine"
        android:nextFocusDown="@+id/editText"
        android:textColor="#000"
        android:textSize="19sp" />
</android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        android:background="@drawable/ripple_btn"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="20sp" />
            </LinearLayout>
    </ScrollView>
</LinearLayout>
